# polkacli

./: Cargo.toml  README.md
src/: cli.rs  client.rs  config.rs  error.rs  main.rs  main.rs.old
src/commands/: account.rs  balance.rs  mint.rs  mint_collection.rs  mint_nft.rs  mod.rs  send.rs  set_nft_metadata.rs  show_collection.rs  show_nft.rs
src/utils/: ipfs_utils.rs  json_utils.rs  mod.rs
